--- a/CP/lab1/dfa_lexer/Cargo.toml
+++ b/CP/lab1/dfa_lexer/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 regex = "1.12.2"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+clap = { version = "4.5.50", features = ["derive"] }
