--- a/DB/hw/Cargo.toml
+++ b/DB/hw/Cargo.toml
@@ -10,4 +10,4 @@ sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "json", "chron
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tower-http = { version = "0.6.8", features = ["cors"] }
-chrono = "0.4.42"
+chrono = { version = "0.4.42", features = ["serde"] }
